Corrected wrong size of the cells. Now color of the cells will change only if the left mouse buttonis down. Also minor fixes.

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 
 .row {
     display: flex;
-    background-color: white;
+    background-color: red;
     /*height: 250px;*/
 }
 
